--- a/style.css
+++ b/style.css
@@ -16,14 +16,26 @@ header{
     font-weight: bold;
 }
 
+.logo{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
 .header img{
     width: 100px;
     height: 100px;
 }
 .menu{
+    padding: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.menu button{
+    padding: 8px 30px;
+
 }
 
 .menu ul{
@@ -90,6 +102,51 @@ header{
     margin: 0 15px 15px;
 }
 
+h2{
+    text-align: center;
+    color: #333;
+    margin-top: 40px;
+}
+
+.contact-form{
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+}
+
+.contact-form label{
+    display: block;
+    margin-bottom: 8px;
+    color: #333;
+}
+
+
+.contact-form input, .contact-form select, .contact-form textarea{
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.contact-form button{
+    background-color: #333;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+.contact-form button:hover{
+    background-color: #555;
+}
+
+
 footer{
     background-color: #333;
     color: white;
@@ -99,3 +156,4 @@ footer{
     bottom: 0;
     width: 100%;
 }
+
