--- a/style.css
+++ b/style.css
@@ -22,6 +22,19 @@ header{
     gap: 10px;
 }
 
+.slogan {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.slogan h1{
+    height: 8px;
+}
+.slogan p{
+    font-size: 20px;
+}
+
 .header img{
     width: 100px;
     height: 100px;
@@ -34,8 +47,19 @@ header{
 }
 
 .menu button{
-    padding: 8px 30px;
+    padding: 8px 40px;
+    border: 1px solid white;
+    background: transparent;
+    cursor: pointer;
+    color: white;
+    font-weight: bold;
+    border-radius: 4px;
 
+}
+.menu button:hover{
+    transition: background, color 0.6s;
+    background: #666;
+    color: white;
 }
 
 .menu ul{
@@ -55,7 +79,7 @@ header{
 }
 
 .menu li a:hover{
-    background-color: rgba(0, 0, 0, 0.1);
+    background: #666;
 }
 
 
@@ -77,6 +101,7 @@ header{
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.2 ease;
+    
 }
 
 .car-card:hover{
@@ -88,6 +113,9 @@ header{
     height: 200px;
     object-fit: cover;
 
+}
+.car-card p {
+    padding: 10px;  
 }
 
 .car-card h3{
@@ -110,7 +138,7 @@ h2{
 
 .contact-form{
     background-color: white;
-    padding: 20px;
+    padding: 40px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-top: 20px;
@@ -120,6 +148,7 @@ h2{
     display: block;
     margin-bottom: 8px;
     color: #333;
+    
 }
 
 
